--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,4 +20,11 @@
         android:padding="10dp"
         android:text="itemDecoration2" />
 
+    <Button
+        android:id="@+id/item_decoration3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:text="itemDecoration3" />
+
 </LinearLayout>
